--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/public/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Reaction Times Tester</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <h2>Reaction Times Tester</h2>
+      <p>
+        
+      </p>
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
