--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <div id="app">
       <h2>Reaction Times Tester</h2>
       <p>
+        This is a <b>Reaction Times Tester</b> designed to measure people's reaction
+        times to different stimuli. This website was designed by Krish and Nicholas for
+        the CREST Gold Award.
+        <br>
+        This website was designed with the Vite framework and NPM.
       </p>
     </div>
     <script type="module" src="/main.js"></script>
