--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <div id="app">
       <h2>Reaction Times Tester</h2>
       <p>
+        This is a <b>Reaction Times Tester</b> designed to measure people's reaction
+        times to different stimuli. This website was designed by Krish and Nicholas for
+        the CREST Gold Award.
+        <br>
+        This website was designed with the Vite framework and NPM.
       </p>
     </div>
   </body>
