--- a/index.html
+++ b/index.html
@@ -11,11 +11,19 @@
       <h2>Reaction Times Tester</h2>
       <p>
         This is a <b>Reaction Times Tester</b> designed to measure people's reaction
-        times to different stimuli. This website was designed by Krish and Nicholas for
-        the CREST Gold Award.
+        times to different stimuli. This website was designed by Krish 
+        and Nicholas for the CREST Gold Award.
         <br>
         This website was designed with the Vite framework and NPM.
       </p>
+      <h3>
+        Tutorial
+      </h3>
+      <p>
+
+      </p>
+      <h3>Setup Tester</h3>
+      <input></input>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
