Add lower range selector

--- a/index.html
+++ b/index.html
@@ -23,7 +23,14 @@
 
       </p>
       <h3>Setup Tester</h3>
-      <input></input>
+      <div>
+        <h4>
+          Lower Range
+        </h4>
+        <select id="lowerRangeSelect">
+          <option value="">Select a number</option>
+        </select>
+      </div>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
