--- a/index.html
+++ b/index.html
@@ -25,7 +25,14 @@
 
       </p>
       <h3>Setup Tester</h3>
-      <input></input>
+      <div>
+        <h4>
+          Lower Range
+        </h4>
+        <select id="lowerRangeSelect">
+          <option value="">Select a number</option>
+        </select>
+      </div>
     </div>
   </body>
 </html>
