--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
           <option value="">Select a number</option>
         </select>
       </div>
+      <div>
+        <h4>
+          Upper Range
+        </h4>
+        <select id="upperRangeSelect">
+          <option value="">Select a number</option>
+        </select>
+      </div>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
