--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <div id="app">
-      <h2>Reaction Times Tester</h2>
+      <div class="topbar">
+        <h2>Reaction Times Tester</h2>
+      </div>
       <p>
         This is a <b>Reaction Times Tester</b> designed to measure people's reaction
         times to different stimuli. This website was designed by Krish 
@@ -22,29 +24,35 @@
       <p>
 				<!-- Put tutorial on how to use reaction times tester -->
       </p>
+      <hr/>
       <h3>Setup Tester</h3>
       <div class="selectionColumn">
         <div class="selectionRow">
-          <h4>
-            Lower Range
-          </h4>
-          <select id="lowerRangeSelect">
-            <option value="">Select a number</option>
-          </select>
-        </div>
-        <div class="selectionRow">
-          <h4>
-            Upper Range
-          </h4>
-          <select id="upperRangeSelect">
-            <option value="">Select a number</option>
-          </select>
-        </div>
-        <div class="selectionRow">
-          <h4>Stimulus Colour</h4>
-          <input type="color" id="stimulusColor" value="#87CEFA"></input>
+          <div class="selectionItem">
+            <h4>
+              Lower Range
+            </h4>
+            <select id="lowerRangeSelect">
+              <option value="">Select a number</option>
+            </select>
+          </div>
+          <div class="selectionItem">
+            <h4>
+              Upper Range
+            </h4>
+            <select id="upperRangeSelect">
+              <option value="">Select a number</option>
+            </select>
+          </div>
+          <div class="selectionItem">
+            <h4>Stimulus Colour</h4>
+            <input type="color" id="stimulusColor" value="#87CEFA"></input>
+          </div>
         </div>
       </div>
+      <span class="instruction">
+        Remember, click the <b>enter</b> key when you see the colour appear!
+      </span>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
