update main.css, topbar.css and index.html

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   <body>
     <div id="app">
       <div class="topbar">
-        <h2>Reaction Times Tester</h2>
+        <span class="topbarItem">Reaction Times Tester</span>
       </div>
+      <div class="topbarSpace"></div>
       <p>
         This is a <b>Reaction Times Tester</b> designed to measure people's reaction
         times to different stimuli. This website was designed by Krish 
