Start adding tester box

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
       <span class="instruction">
         Remember, click the <b>enter</b> key when you see the colour appear!
       </span>
+      <div id="tester" class="testerBox">
+        
+      </div>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
