Center stimulus box

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
       <span class="instruction">
         Remember, click the <b>enter</b> key when you see the colour appear!
       </span>
-      <div id="tester" class="testerBox">
-        
+      <div class="horizontalCenter">
+        <div id="tester" class="testerBox"></div>
       </div>
     </div>
     <script type="module" src="/main.js"></script>
