Add button animations

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <span class="topbarItem">Reaction Times Tester</span>
       </div>
       <div class="topbarSpace"></div>
+      <!-- Move the about section into different page -->
       <p>
         This is a <b>Reaction Times Tester</b> designed to measure people's reaction
         times to different stimuli. This website was designed by Krish 
