--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
         Remember, click the <b>enter</b> key when you see the colour appear!
       </span>
       <div class="horizontalCenter">
-        <div id="tester" class="testerBox"></div>
+        <div id="tester" class="testerBox">
+          <div id="testerStats" class="testerStats"></div>
+        </div>
       </div>
     </div>
     <script type="module" src="/main.js"></script>
