Make button animation

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
       </span>
       <div class="horizontalCenter">
         <div id="tester" class="testerBox">
+          <button id="startTestButton" class="startTestButton">Start</button>
           <div id="testerStats" class="testerStats"></div>
         </div>
       </div>
