--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
       </span>
       <div class="horizontalCenter">
         <div id="tester" class="testerBox">
-          <div id="testerStats" class="testerStats"></div>
+          <div id="testerStats" class="testerStats">
+            <h1 class="timeElapsed"><b>Time Elapsed</b></h1>
+          </div>
         </div>
       </div>
     </div>
