--- a/index.html
+++ b/index.html
@@ -59,10 +59,12 @@
         <div id="tester" class="testerBox">
           <div id="testerStats" class="testerStats">
             <h1 class="timeElapsed"><b>Time Elapsed</b></h1>
+            
           </div>
         </div>
       </div>
     </div>
     <script type="module" src="/main.js"></script>
+    <script type="module" src="/timeElapsed.js"></script>
   </body>
 </html>
